native-codec/jni/compiling_error.txt
clang: warning: treating 'c-header' input as 'c++-header' when in C++ mode, this behavior is deprecated
/Users/Jing/C++/native-codec/jni/looper.h:17:2: error: expected ';' after class
}
 ^
 ;
1 error generated.
